@@ -106,24 +106,25 @@ BEGIN
     PUSHBUTTON      "Toggle &BG Out",IDC_SNDTOBG,458,131,53,14
 END
 
-IDD_IMAGEDIALOG DIALOGEX 0, 0, 514, 177
+IDD_IMAGEDIALOG DIALOGEX 0, 0, 515, 200
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Image Manager"
 FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,457,161,50,14
-    CONTROL         "List1",201,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | LVS_SORTASCENDING | LVS_EDITLABELS | WS_BORDER | WS_TABSTOP,7,7,338,167
+    DEFPUSHBUTTON   "OK",IDOK,457,180,50,14
+    CONTROL         "List1",201,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | LVS_SORTASCENDING | LVS_EDITLABELS | WS_BORDER | WS_TABSTOP,7,7,338,190
     PUSHBUTTON      "&Import",IDC_IMPORT,457,7,50,14
     PUSHBUTTON      "&Reimport",IDC_REIMPORT,457,26,50,14
     PUSHBUTTON      "Reimport &From",IDC_REIMPORTFROM,457,44,50,14
-    PUSHBUTTON      "&Delete",IDC_DELETE_IMAGE,457,62,50,14
-    PUSHBUTTON      "&Rename",IDC_RENAME,457,80,50,14
-    PUSHBUTTON      "&Export",IDC_EXPORT,457,98,50,14
+    PUSHBUTTON      "&Delete",IDC_DELETE_IMAGE,457,80,50,14
+    PUSHBUTTON      "&Rename",IDC_RENAME,457,98,50,14
+    PUSHBUTTON      "&Export",IDC_EXPORT,457,116,50,14
     CONTROL         "Button1",IDC_PICTUREPREVIEW,"Button",BS_OWNERDRAW | WS_TABSTOP,352,16,101,145
-    EDITTEXT        IDC_ALPHA_MASK_EDIT,459,143,40,14,ES_AUTOHSCROLL
-    LTEXT           "Alpha Mask",IDC_STATIC,460,119,38,8
-    LTEXT           "(<= masks out)",IDC_STATIC,459,127,47,8
-    LTEXT           "(0..255)",IDC_STATIC,459,135,25,8
+    EDITTEXT        IDC_ALPHA_MASK_EDIT,459,162,40,14,ES_AUTOHSCROLL
+    LTEXT           "Alpha Mask",IDC_STATIC,460,138,38,8
+    LTEXT           "(<= masks out)",IDC_STATIC,459,146,47,8
+    LTEXT           "(0..255)",IDC_STATIC,459,154,25,8
+    PUSHBUTTON      "&Update All",IDC_UPDATE_ALL_BUTTON,458,62,50,14
 END
 
 IDD_ROTATE DIALOGEX 0, 0, 186, 95
@@ -605,7 +606,7 @@ BEGIN
     CTEXT           "Paused",IDC_STATIC,7,7,64,10
 END
 
-IDD_EDITOR_OPTIONS DIALOGEX 0, 0, 185, 105
+IDD_EDITOR_OPTIONS DIALOGEX 0, 0, 185, 138
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Editor Options"
 FONT 8, "MS Sans Serif", 0, 0, 0x0
@@ -616,13 +617,17 @@ BEGIN
     EDITTEXT        IDC_AUTOSAVE_MINUTES,102,32,25,12,ES_RIGHT | ES_AUTOHSCROLL
     LTEXT           "Grid size",IDC_STATIC,117,63,29,8
     EDITTEXT        IDC_GRID_SIZE,149,61,27,12,ES_AUTOHSCROLL
-    DEFPUSHBUTTON   "OK",IDOK,67,81,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,128,81,50,14
+    DEFPUSHBUTTON   "OK",IDOK,70,120,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,131,120,50,14
     LTEXT           "minutes",IDC_STATIC,132,33,25,8
     CONTROL         "Properties Menu floating (needs restart)",IDC_PROP_FLOAT_CHECK,
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,47,139,10
     CONTROL         "Custom2",IDC_COLOR,"ColorControl",WS_TABSTOP,78,60,32,16
     LTEXT           "Default Material Color",IDC_STATIC,7,64,68,8
+    GROUPBOX        "Throw Balls in Player",IDC_STATIC,3,82,178,31
+    CONTROL         "Always On",IDC_THROW_BALLS_ALWAYS_ON_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,96,49,10
+    LTEXT           "Ball Size",IDC_STATIC,122,97,28,8
+    EDITTEXT        IDC_THROW_BALLS_SIZE_EDIT,152,94,23,14,ES_AUTOHSCROLL
 END
 
 IDD_COLLECTDIALOG DIALOGEX 0, 0, 316, 167
@@ -1574,7 +1579,7 @@ BEGIN
     LTEXT           "Two Way",IDC_STATIC,7,47,32,8
 END
 
-IDD_DEBUGGER DIALOGEX 0, 0, 346, 204
+IDD_DEBUGGER DIALOGEX 0, 0, 347, 214
 STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_VISIBLE | WS_CAPTION | WS_SYSMENU
 EXSTYLE WS_EX_TOOLWINDOW
 CAPTION "Debugger"
@@ -1586,12 +1591,14 @@ BEGIN
     CONTROL         "Check2",IDC_PAUSE,"Button",BS_AUTOCHECKBOX | BS_ICON | BS_PUSHLIKE | WS_TABSTOP,25,7,18,17
     CONTROL         "Check2",IDC_STEP,"Button",BS_AUTOCHECKBOX | BS_ICON | BS_PUSHLIKE | WS_TABSTOP,43,7,18,17
     CONTROL         ">",IDC_EXPAND,"Button",BS_AUTOCHECKBOX | BS_PUSHLIKE | WS_TABSTOP,110,7,14,17
-    LTEXT           "Static",IDC_GUIDE1,109,27,23,10,NOT WS_VISIBLE
     LTEXT           "Static",IDC_GUIDE2,320,190,25,8,NOT WS_VISIBLE
-    LTEXT           "Static",IDC_EDITSIZE,9,54,332,144,NOT WS_VISIBLE | WS_BORDER
-    LTEXT           "Immediate Window",IDC_STATIC,7,42,63,9
+    LTEXT           "Static",IDC_EDITSIZE,9,65,332,144,NOT WS_VISIBLE | WS_BORDER
+    LTEXT           "Immediate Window",IDC_STATIC,7,53,63,9
     LTEXT           "",IDC_TOOLBARSIZE,155,16,54,24
     CONTROL         "Throw Balls in Player",IDC_BALL_THROWING,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,8,27,81,10
+    LTEXT           "Ball Size",IDC_STATIC,8,40,28,8
+    EDITTEXT        IDC_THROW_BALL_SIZE_EDIT2,36,38,25,12,ES_AUTOHSCROLL
+    LTEXT           "Static",IDC_GUIDE1,109,27,23,10,NOT WS_VISIBLE
 END
 
 IDD_COMLIST DIALOG 0, 0, 287, 190
@@ -2025,6 +2032,8 @@ BEGIN
 
     IDD_IMAGEDIALOG, DIALOG
     BEGIN
+        RIGHTMARGIN, 514
+        BOTTOMMARGIN, 186
     END
 
     IDD_PROPFLIPPER_VISUALS, DIALOG
@@ -2059,6 +2068,10 @@ BEGIN
     END
 
     IDD_PHYSICS_OPTIONS, DIALOG
+    BEGIN
+    END
+
+    IDD_GAMEPAUSE, DIALOG
     BEGIN
     END
 
@@ -2144,6 +2157,11 @@ BEGIN
     END
 
     IDD_DEBUGGER, DIALOG
+    BEGIN
+        RIGHTMARGIN, 346
+    END
+
+    IDD_COMLIST, DIALOG
     BEGIN
     END
 
